# pixi-stage

./: .gitignore  README.md  pyproject.toml
pixi_stage/: __init__.py  cli.py  config.py  errors.py  feedstock.py  gitutil.py  member_manifest.py  ops.py  recipe_inject.py  reqs.py  root_manifest.py  srcpath.py  validate.py  wire.py  workspace.py
recipe/: build.sh  recipe.yaml
