[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pixi-stage"
version = "0.1.0"
description = "Stage conda packages into a pixi workspace as editable, source-built dependencies (a `pixi stage` extension)."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ruamel.yaml",
    "tomlkit",
]

[project.scripts]
pixi-stage = "pixi_stage.cli:stage_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pixi_stage*"]
